syntax = "proto3";
package pain.proto.deva.store;

import "pain/proto/common.proto";

message CreateFileRequest {
    string path = 1;
    UUID file_id = 2;
}

message CreateFileResponse {
    FileInfo file_info = 1;
}

message CreateDirRequest {
    string path = 1;
    UUID dir_id = 2;
}

message CreateDirResponse {}

message RemoveFileRequest {}

message RemoveFileResponse {}

message SealFileRequest {}

message SealFileResponse {}

message CheckInChunkRequest {}

message CheckInChunkResponse {}

message CreateChunkRequest {}

message CreateChunkResponse {}

message SealChunkRequest {}

message SealChunkResponse {}

message SealAndNewChunkRequest {}

message SealAndNewChunkResponse {}
